re PR fortran/47730 ([OOP] ICE on invalid source in connection with SELECT TYPE)

2011-02-14  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/47730
	* parse.c (gfc_build_block_ns): Commit 'block@' symbol.

2011-02-14  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/47730
	* gfortran.dg/select_type_22.f03: New.

From-SVN: r170157